--- a/frontend/src/Components/FirstPageComponents/transformationslide.css
+++ b/frontend/src/Components/FirstPageComponents/transformationslide.css
@@ -64,8 +64,23 @@ h3{
     flex-direction: row;
 
 }
+#image-slider{
+    border: 2px solid white; 
+    margin-left: 27.5rem; 
+    margin-right: 27.5rem;
+    width:599px;
+    height:699px;
+}
+#transformation-title{
 
-@media screen and (max-width: 768px){
+    margin-left: 2.5em;
+    margin-top: 0em;
+    margin-bottom: 3em; 
+    padding-top: 1em;
+
+}
+
+@media screen and (max-width: 765px){
     #transformation-slide-container{
         background: linear-gradient(to bottom ,#2e2d2d,#1f1e1e);
         padding-top: 45em;
@@ -88,5 +103,21 @@ h3{
     #rightBtn{
         padding-right: 1em;
         padding-top: 10em;
+    }
+
+    #image-slider{
+        border: 2px solid white; 
+        margin-left: 2.9rem; 
+        margin-right: 1.5rem;
+        width:300px;
+        height:410px;
+    }
+    #transformation-title{
+
+        margin-left: 1.5em;
+        margin-top: 0em;
+        margin-bottom: 3em; 
+        padding-top: 1em;
+    
     }
 }
