--- a/frontend/src/Components/FirstPageComponents/Introbanner.css
+++ b/frontend/src/Components/FirstPageComponents/Introbanner.css
@@ -33,7 +33,7 @@
     margin-left: 9em;
     border: 1px solid white;
     border-radius: 2em;
-    
+    margin-right: 4em;
     
 }
 #leftSide h3{
