--- a/frontend/src/Components/price.css
+++ b/frontend/src/Components/price.css
@@ -28,6 +28,7 @@
 }
 #twenty-six-weeks{
     /*margin-top: 2.5em;*/
+    width: 30vw;
 }
 
 .weeks-title{
@@ -108,6 +109,13 @@ strike{
        
          
     }
+    /*#twenty-six-weeks{
+        border-bottom: 2px solid white;
+        border-right: 2px solid #1f1e1e;
+        width: 85.5vw;
+       
+         
+    }*/
     .payment-btn-container{
         margin-bottom: 3em;
     }
