--- a/frontend/src/Components/FirstPageComponents/Introbanner.css
+++ b/frontend/src/Components/FirstPageComponents/Introbanner.css
@@ -12,6 +12,7 @@
 }
 #left-right-container{
     display: flex;
+    width: 100%;
     flex-direction: row;
     justify-content: left;
     margin-top: 10em;
@@ -28,12 +29,12 @@
 }
 #rightSide{
     overflow: hidden;
-    width: 17.5em;
+    width: 17.9em;
     height: 25.5em;
-    margin-left: 9em;
+    margin-left: 5.8em;
     border: 1px solid white;
     border-radius: 2em;
-    margin-right: 4em;
+    margin-right: 1.2em;
     
 }
 #leftSide h3{
@@ -92,6 +93,7 @@
     margin-right: 0em;
     border-radius: 1.3em;
     border: 1px solid white;
+   
     
 }
 @keyframes slideAnimations{
@@ -114,10 +116,12 @@
     position: relative;
     
     
+    
 }
 #trainer-img-2{
     border-radius: 1em;
     position: relative;
+   
 }
 
 @keyframes slideAnimationsTransformations{
@@ -140,21 +144,23 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-top: 70em;
-    margin-bottom: 14em;
+    margin-top: 50em;
+    margin-bottom: 5em;
     margin-right: 5em;
     text-align: center;
     /*font-family: 'Alexandria', sans-serif;*/
 }
 #leftSide h3{
     font-size: 2.8em;
-    margin-left: 2em;
+    margin-left: 0.2em;
 }
 #leftSide h4{
     font-size: 1.5em;
+    margin-left: 0.2em;
 }
 #enroll-btn{
     margin-bottom: 5em;
+    margin-left: 1em;
 }
 #rightSide{
     overflow: hidden;
@@ -166,6 +172,9 @@
     
     
 }
+
+
+
 }
 
 
