--- a/frontend/src/Components/navbar.css
+++ b/frontend/src/Components/navbar.css
@@ -114,6 +114,7 @@
     display: block;
     width: 5em;
     height: 5em;
+    
   }
 
   #person-id{
@@ -133,5 +134,10 @@
   padding: 0 0;
 }
 
+.dropdown-content{
+  margin-right: 3em;
+  transform: translate(-52%, 0);
+  text-align: center;
+}
 
   }
