--- a/frontend/src/Components/register.css
+++ b/frontend/src/Components/register.css
@@ -11,7 +11,10 @@
    
     display: flex;
     flex-direction: row;
-    width: 37vw;
+    justify-content: center;
+    /*width: 100%;*/
+    /*margin-left: 10em;
+    margin-right:10em;*/
     
 
 }
@@ -24,9 +27,9 @@
     background: #2e2d2d;
     height: 5vh;
     width: 101%;
-    margin-bottom: 3em;
+    margin-bottom: 0.4em;
     border-radius: 0.5em;
-    margin-right:1rem;
+    margin-right:0.2rem;
     border-top: 2px solid #1f1e1e;
     border-left: 2px solid #1f1e1e;
     border-right: 2px solid #1f1e1e;
@@ -34,7 +37,7 @@
     font-size: 1em;
 }
 #dob{
-    width: 37vw;
+    width: 57vw;
     height: 5vh;
     background: #2e2d2d;
     color: white;
@@ -46,8 +49,8 @@
     margin-bottom: 3em;
     
 }
-#genders, #weight, #activity-types, #phone-number, #state, #cities{
-    width: 37vw;
+#genders, #weight, #activity-types, #phone-number, #state, #cities, #email, #password{
+    width: 57vw;
     height: 5vh;
     background: #2e2d2d;
     color: white;
@@ -66,6 +69,28 @@
     border : 10px solid #438c68;
     border-radius: 0.1em;
     margin-bottom: 2em;
+}
+#email, #password, #dob, #genders, #weight, #activity-types, #phone-number, #state, #cities{
+    margin-bottom: 0.5em;
+}
+
+#fname-container{
+    margin-right: 1em; 
+    width: 25vw;
+}
+#lname-container{
+    margin-left: 1.2em; 
+    width: 26vw; 
+}
+
+#feet-container{
+    margin-right: 1em; 
+    width: 25vw;
+}
+
+#inch-container{
+    margin-left: 1em; 
+    width: 26vw;
 }
 
 @media screen and (max-width: 765px){
@@ -86,7 +111,26 @@
         
     
     }
-    #dob, #genders, #weight, #activity-types, #phone-number, #state, #inches, #cities{
+    #dob, #genders, #weight, #activity-types, #phone-number, #state, #cities, #email, #password{
         width: 85.5vw;
+    }
+
+    #fname-container{
+        margin-right: 1em; 
+        width: 65vw;
+    }
+    #lname-container{
+        margin-left: 1.2em; 
+        width: 66vw; 
+    }
+
+    #feet-container{
+        margin-right: 1em; 
+        width: 65vw;
+    }
+    
+    #inch-container{
+        margin-left: 1em; 
+        width: 66vw;
     }
 }
